# flet-lottie

./: .docstr.yaml  .gitignore  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/scripts/: update_build_version.sh
.github/workflows/: build-and-publish.yml  docs.yml  release.yml
changelog/: index.html
docs/: index.md  lottie.md
docs/extras/templates/python/material/: attribute.html.jinja  class.html.jinja
examples/lottie_example/: .gitignore  pyproject.toml
examples/lottie_example/src/: main.py
license/: index.html
lottie/: index.html
search/: search_index.json
src/flet_lottie/: lottie.py
src/flutter/flet_lottie/: pubspec.yaml
src/flutter/flet_lottie/lib/src/: lottie.dart
tests/: pyproject.toml
tests/src/: main.py
tests/src/assets/: sample.json
