[project]
name = "flet-lottie"
version = "0.2.0"
description = "Display Lottie animations in Flet apps."
readme = "README.md"
authors = [{ name = "Flet contributors", email = "hello@flet.dev" }]
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "flet",
]

[project.urls]
Homepage = "https://flet.dev"
Documentation = "https://flet.dev/docs/controls/lottie"
Repository = "https://github.com/flet-dev/flet-lottie"
Issues = "https://github.com/flet-dev/flet-lottie/issues"

[tool.setuptools.package-data]
"flutter.flet_lottie" = ["**/*"]

[tool.uv]
dev-dependencies = [
    "flet",
    "flet-cli",
    "flet-desktop",
    #"mkdocs",
    #"mkdocs-material",
    #"mkdocstrings[python]"
    "pre-commit>=4.2.0",
]

[tool.uv.sources]
flet = { git = "https://github.com/flet-dev/flet", subdirectory = "sdk/python/packages/flet", rev = "v1" }
flet-cli = { git = "https://github.com/flet-dev/flet", subdirectory = "sdk/python/packages/flet-cli", rev = "v1" }
flet-desktop = { git = "https://github.com/flet-dev/flet", subdirectory = "sdk/python/packages/flet-desktop", rev = "v1" }

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
